syntax = "proto3";

package org.graylog.inputs.otel;

option java_package = "org.graylog.inputs.otel";
option java_outer_classname = "OTelJournal";

import "opentelemetry/proto/resource/v1/resource.proto";
import "opentelemetry/proto/common/v1/common.proto";
import "opentelemetry/proto/logs/v1/logs.proto";

message Record {
  oneof payload {
    Log log = 1;
  }
}

message Log {
  opentelemetry.proto.resource.v1.Resource resource = 1;
  string resource_schema_url = 2;
  opentelemetry.proto.common.v1.InstrumentationScope scope = 3;
  opentelemetry.proto.logs.v1.LogRecord log_record = 4;
  string log_record_schema_url = 5;
}
